--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   bloc: ^8.1.2
   cupertino_icons: ^1.0.2
   device_preview: ^1.1.0
+  dotted_line: ^3.2.2
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.3
@@ -39,6 +40,7 @@ dependencies:
   go_router: ^13.0.1
   material_color_gen: ^2.0.0
   responsive_framework: ^1.1.1
+  timeline_tile: ^2.0.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
