--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,9 +29,12 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   bloc: ^8.1.2
+  cloud_firestore: ^4.14.0
   cupertino_icons: ^1.0.2
-  device_preview: ^1.1.0
+ # device_preview: ^1.1.0
   dotted_line: ^3.2.2
+  firebase_auth: ^4.16.0
+  firebase_core: ^2.24.2
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.3
@@ -41,6 +44,9 @@ dependencies:
   material_color_gen: ^2.0.0
   responsive_framework: ^1.1.1
   timeline_tile: ^2.0.0
+  # firebase_core: 
+  # cloud_firestore: ^3.1.0
+  # firebase_auth: ^3.3.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
