--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,6 @@ dependencies:
   bloc: ^8.1.2
   cloud_firestore: ^4.14.0
   cupertino_icons: ^1.0.2
- # device_preview: ^1.1.0
   dotted_line: ^3.2.2
   firebase_auth: ^4.16.0
   firebase_core: ^2.24.2
@@ -39,14 +38,13 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^8.1.3
   flutter_svg: ^2.0.9
+  font_awesome_flutter: ^10.7.0
   get_it: ^7.6.7
   go_router: ^13.0.1
+  google_sign_in: ^6.1.6
   material_color_gen: ^2.0.0
   responsive_framework: ^1.1.1
   timeline_tile: ^2.0.0
-  # firebase_core: 
-  # cloud_firestore: ^3.1.0
-  # firebase_auth: ^3.3.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
