--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.3
+  flutter_facebook_auth: ^6.0.4
   flutter_svg: ^2.0.9
   font_awesome_flutter: ^10.7.0
   get_it: ^7.6.7
